fixing overflow 2

--- a/src/Style/ProfilePage.css
+++ b/src/Style/ProfilePage.css
@@ -122,6 +122,8 @@
     width:20vw;
     min-width: 150px;
     /* width:500px; */
+    display:flex;
+    flex-wrap: wrap;
     height: 10vh;
 }
 #buttoncont{
